// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Reducer Should handle CANCEL_EMAIL_CHANGE 1`] = `
Object {
  "confirmationEmailResent": false,
  "displayChartModal": false,
  "groupAdminUsersUserDeletionFailed": false,
  "groupAdminUsersUserDeletionSuccessful": false,
  "isSubmittingAccountForm": false,
  "mapTokens": Object {
    "mapbox": Object {
      "initialPublicToken": "***REMOVED***",
      "publicToken": "***REMOVED***",
      "styleId": "***REMOVED***",
      "styleOwner": "capcollectif",
    },
  },
  "registration_form": Object {
    "bottomText": "",
    "bottomTextDisplayed": false,
    "domains": Array [],
    "hasQuestions": false,
    "questions": Array [],
    "topText": "",
    "topTextDisplayed": false,
  },
  "showConfirmPasswordModal": false,
  "showLoginModal": false,
  "showRegistrationModal": false,
  "user": Object {
    "newEmailToConfirm": null,
  },
}
`;

exports[`User Reducer Should handle CLOSE_CONFIRM_PASSWORD_MODAL 1`] = `
Object {
  "confirmationEmailResent": false,
  "displayChartModal": false,
  "groupAdminUsersUserDeletionFailed": false,
  "groupAdminUsersUserDeletionSuccessful": false,
  "isSubmittingAccountForm": false,
  "mapTokens": Object {
    "mapbox": Object {
      "initialPublicToken": "***REMOVED***",
      "publicToken": "***REMOVED***",
      "styleId": "***REMOVED***",
      "styleOwner": "capcollectif",
    },
  },
  "registration_form": Object {
    "bottomText": "",
    "bottomTextDisplayed": false,
    "domains": Array [],
    "hasQuestions": false,
    "questions": Array [],
    "topText": "",
    "topTextDisplayed": false,
  },
  "showConfirmPasswordModal": false,
  "showLoginModal": false,
  "showRegistrationModal": false,
  "user": null,
}
`;

exports[`User Reducer Should handle SHOW_CONFIRM_PASSWORD_MODAL 1`] = `
Object {
  "confirmationEmailResent": false,
  "displayChartModal": false,
  "groupAdminUsersUserDeletionFailed": false,
  "groupAdminUsersUserDeletionSuccessful": false,
  "isSubmittingAccountForm": false,
  "mapTokens": Object {
    "mapbox": Object {
      "initialPublicToken": "***REMOVED***",
      "publicToken": "***REMOVED***",
      "styleId": "***REMOVED***",
      "styleOwner": "capcollectif",
    },
  },
  "registration_form": Object {
    "bottomText": "",
    "bottomTextDisplayed": false,
    "domains": Array [],
    "hasQuestions": false,
    "questions": Array [],
    "topText": "",
    "topTextDisplayed": false,
  },
  "showConfirmPasswordModal": true,
  "showLoginModal": false,
  "showRegistrationModal": false,
  "user": null,
}
`;

exports[`User Reducer Should handle STOP_SUBMIT_ACCOUNT_FORM 1`] = `
Object {
  "confirmationEmailResent": false,
  "displayChartModal": false,
  "groupAdminUsersUserDeletionFailed": false,
  "groupAdminUsersUserDeletionSuccessful": false,
  "isSubmittingAccountForm": false,
  "mapTokens": Object {
    "mapbox": Object {
      "initialPublicToken": "***REMOVED***",
      "publicToken": "***REMOVED***",
      "styleId": "***REMOVED***",
      "styleOwner": "capcollectif",
    },
  },
  "registration_form": Object {
    "bottomText": "",
    "bottomTextDisplayed": false,
    "domains": Array [],
    "hasQuestions": false,
    "questions": Array [],
    "topText": "",
    "topTextDisplayed": false,
  },
  "showConfirmPasswordModal": false,
  "showLoginModal": false,
  "showRegistrationModal": false,
  "user": null,
}
`;

exports[`User Reducer Should handle SUBMIT_ACCOUNT_FORM 1`] = `
Object {
  "confirmationEmailResent": false,
  "displayChartModal": false,
  "groupAdminUsersUserDeletionFailed": false,
  "groupAdminUsersUserDeletionSuccessful": false,
  "isSubmittingAccountForm": true,
  "mapTokens": Object {
    "mapbox": Object {
      "initialPublicToken": "***REMOVED***",
      "publicToken": "***REMOVED***",
      "styleId": "***REMOVED***",
      "styleOwner": "capcollectif",
    },
  },
  "registration_form": Object {
    "bottomText": "",
    "bottomTextDisplayed": false,
    "domains": Array [],
    "hasQuestions": false,
    "questions": Array [],
    "topText": "",
    "topTextDisplayed": false,
  },
  "showConfirmPasswordModal": false,
  "showLoginModal": false,
  "showRegistrationModal": false,
  "user": null,
}
`;

exports[`User Reducer Should handle SUBMIT_CONFIRM_PASSWORD_FORM 1`] = `
Object {
  "confirmationEmailResent": false,
  "displayChartModal": false,
  "groupAdminUsersUserDeletionFailed": false,
  "groupAdminUsersUserDeletionSuccessful": false,
  "isSubmittingAccountForm": false,
  "mapTokens": Object {
    "mapbox": Object {
      "initialPublicToken": "***REMOVED***",
      "publicToken": "***REMOVED***",
      "styleId": "***REMOVED***",
      "styleOwner": "capcollectif",
    },
  },
  "registration_form": Object {
    "bottomText": "",
    "bottomTextDisplayed": false,
    "domains": Array [],
    "hasQuestions": false,
    "questions": Array [],
    "topText": "",
    "topTextDisplayed": false,
  },
  "showConfirmPasswordModal": false,
  "showLoginModal": false,
  "showRegistrationModal": false,
  "user": null,
}
`;

exports[`User Reducer Should handle USER_REQUEST_EMAIL_CHANGE 1`] = `
Object {
  "confirmationEmailResent": false,
  "displayChartModal": false,
  "groupAdminUsersUserDeletionFailed": false,
  "groupAdminUsersUserDeletionSuccessful": false,
  "isSubmittingAccountForm": false,
  "mapTokens": Object {
    "mapbox": Object {
      "initialPublicToken": "***REMOVED***",
      "publicToken": "***REMOVED***",
      "styleId": "***REMOVED***",
      "styleOwner": "capcollectif",
    },
  },
  "registration_form": Object {
    "bottomText": "",
    "bottomTextDisplayed": false,
    "domains": Array [],
    "hasQuestions": false,
    "questions": Array [],
    "topText": "",
    "topTextDisplayed": false,
  },
  "showConfirmPasswordModal": false,
  "showLoginModal": false,
  "showRegistrationModal": false,
  "user": Object {
    "newEmailToConfirm": "popo@gmail.com",
  },
}
`;
